# spbu-cpp-labs

./: .gitignore
lab1/: BMP24bit.cpp  BMP24bit.h  BMP8bit.cpp  BMP8bit.h  Filter.h  GaussianFilter.cpp  GaussianFilter.h  Makefile  Pixel.h  README.md  main  main.cpp
lab1/valgrind/: valgrind.txt
lab2/: CMakeLists.txt  README.md  main.cpp
lab2/entity/: Entity.cpp  Entity.h  entity.cpp  entity.h
lab2/entity/creep/: Creep.cpp  Creep.h  FractionCreep.cpp  FractionCreep.h  NeuralCreep.cpp  NeuralCreep.h
lab2/entity/hero/: Alchemist.cpp  Alchemist.h  Axe.cpp  Axe.h  Dazzle.cpp  Dazzle.h  Hero.cpp  Hero.h  Puck.cpp  Puck.h  Pudge.cpp  Pudge.h  Sniper.cpp  Sniper.h
lab2/game/: Game.cpp  Game.h
lab2/inventory/: Inventory.cpp  Inventory.h
lab2/items/: FaerieFire.cpp  FaerieFire.h  HeartOfTarrasque.cpp  HeartOfTarrasque.h  Item.cpp  Item.h  Tango.cpp  Tango.h
lab2/src/entity/hero/: Alchemist.cpp  Axe.cpp  Axe.h  Dazzle.h  Hero.cpp
lab2/src/inventory/: Inventory.h
lab2/src/items/: FaerieFire.h  Item.h
lab2/src/team/: Team.cpp
lab2/team/: Team.cpp  Team.h
lab2/valgrind/: logs.txt
lab3/: CMakeLists.txt  FSM.h  main.cpp
